# ChangeLog for sci-libs/gdal
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/gdal/ChangeLog,v 1.40 2008/04/11 18:16:41 grobian Exp $

  11 Apr 2008; Fabian Groffen <grobian@gentoo.org> gdal-1.5.0-r1.ebuild:
  Correct configure argument for sqlite: it's sqlite3

*gdal-1.5.0-r1 (22 Mar 2008)

  22 Mar 2008; Steve Arnold <nerdboy@gentoo.org> -gdal-1.5.0.ebuild,
  +gdal-1.5.0-r1.ebuild:
  Updated for optional libgrass rebuild support (avoids circular 
  dependency issue).

  09 Feb 2008; Steve Arnold <nerdboy@gentoo.org> ChangeLog:
  removed stale digest files; had to force it again after a tree update...

  09 Feb 2008; Steve Arnold <nerdboy@gentoo.org>
  files/gdal-1.5.0-python-install.patch, gdal-1.5.0.ebuild:
  Updated python patch, deps, and use flags (the first should fix the install
  bug reported in #206608).  The rest picks up new features/depends in 1.5.0.

*gdal-1.5.0 (03 Feb 2008)

  03 Feb 2008; Steve Arnold <nerdboy@gentoo.org>
  +files/gdal-1.5.0-makefile.patch, +files/gdal-1.5.0-python-install.patch,
  +files/gdal-1.5.0-soname.patch, +gdal-1.5.0.ebuild:
  updated to latest upstream release plus patches

  04 Jan 2008; Steve Arnold <nerdboy@gentoo.org> gdal-1.4.2.ebuild:
  fixed mysql borkage; no idea what happened...

  04 Jan 2008; Steve Arnold <nerdboy@gentoo.org>
  -files/gdal-1.2.6-installpathfix.patch,
  -files/gdal-1.3.0-installpathfix.patch, -gdal-1.2.6-r4.ebuild,
  -gdal-1.3.0-r1.ebuild, gdal-1.3.1.ebuild, gdal-1.3.2.ebuild,
  gdal-1.4.2.ebuild:
  Updated xerces-c dep for API change (bug 203019) and removed stale versions.
  The 1.4.3 release of GDAL was pulled, however, 1.4.4 will be updated for the
  2.8.0 version of xerces-c.

*gdal-1.4.2 (02 Jul 2007)

  02 Jul 2007; Steve Arnold <nerdboy@gentoo.org>
  +files/gdal-1.4.2-datadir.patch, +files/gdal-1.4.2-ruby-install.patch,
  +gdal-1.4.2.ebuild:
  Update to latest release (fixes bug 182306). Test away...
