@@ -3,6 +3,6 @@ AUX gdal-1.5.0-makefile.patch 894 RMD160 955b2ac69f6d8477cc26ae1321ddc0d92e88fb9
 AUX gdal-1.5.0-python-install.patch 481 RMD160 c618ad3238f6ed91740d148a87a068d00d7c4207 SHA1 66e594995f7670b3b209607b209c95c2982e4e1a SHA256 b7fd770ef84559ce2d5ba433534794b7a8f96d3d8ccf30268eb66a824b5dfb44
 AUX gdal-1.5.0-soname.patch 483 RMD160 4ed5e17c3b1e50a1d0bbb52a1d3a56f5bec52aa4 SHA1 8a98cc52bb1d74a1d45f72f8191cf322ee050682 SHA256 212f6f4cb1ef6051bdd1306cedd2236eada53a9ab650158c3b37577f7cd566e7
 DIST gdal-1.5.0.tar.gz 6167411 RMD160 25326301edbc88739fce6f33b42dfb9499842896 SHA1 c049d29f530f1867e4edcf36b1a299c96a9327a1 SHA256 9ac75f8928aa649a70e2aa3ebda86e71e18acc295cd874c43d33a84ac11c1e91
-EBUILD gdal-1.5.0-r1.ebuild 6080 RMD160 f126d7d850606aa9a83840090c6d8168c4c0e762 SHA1 6cd67488a18b0ebc36ad7fdacc62391852a9858a SHA256 66f34661181d3f605fd4eba79be357735211ca203f6bd9ede831a2e1094736c2
-MISC ChangeLog 7900 RMD160 63cfffee475607c59ee1e0252fb9f3e3e9656ab5 SHA1 24369f16c3423697469f4d24a4fb607b4115d7e1 SHA256 190b83e3672621495cecd1b765e432ef1463be1bfa3b6873460d704e8f080457
+EBUILD gdal-1.5.0-r1.ebuild 6111 RMD160 a1fc9239612f2ed9c4c326abeab1ebb284691a42 SHA1 9ea0c4a16f4465a39cb6516aa6b0ce2e7577646e SHA256 d9033587d46e10544a26715a5c958cc303b25b1b927201ad59e7874b1867d4f3
+MISC ChangeLog 8017 RMD160 986bdbb14e2096d4afae96bc09dd1096396b71cf SHA1 331fa02fe710a634a0eb3e557c30c6ff10dc5856 SHA256 e32e3282df3cfb57c9eb00537936034ea5660ab1310ed914fef78493a4a1f124
 MISC metadata.xml 493 RMD160 8ad930d21e928734d6c22796abc6da27f420eb4d SHA1 d97adc27fa58d040e92e93d17fce2f666090ad36 SHA256 1f6fdd4665a2c5e8f6f53e3d7d1b05ab2696eb23af60d7f430e20b2b3022b958
